# metallium-loader

./: .gdbinit  Cargo.toml  build.rs
esp/efi/boot/: bootx64.efi  kernel
low/: boot.lib  boot.s  compile.sh
scripts/: all.sh  build.sh  debug.sh  esp.sh  kvm.sh  run.sh  rust.sh
src/: main.rs
